--- a/苹果面挂经历.md
+++ b/苹果面挂经历.md
@@ -1,9 +1,8 @@
 ---
-title: 面挂苹果的经历
-tags: 个人成长
-date: 2020年09月04日14:24:25
+标题: 面挂苹果的经历
+标签: 个人成长
+创建时间: 2020年09月1
 ---
-
 
 前些天有幸拿到了在美国的苹果公司一个Senior Java Engineer职位Virtual Onsite面试，昨天收到了拒信，但这个过程还是挺有收获的。那到底什么是Virtual Onsite面试呢？
 
@@ -27,3 +26,5 @@ date: 2020年09月04日14:24:25
 有个更好的消息是，后面苹果公司的另一个team的recruiter有联系我，问我是否有兴趣安排时间面试。
 ![](./_image/2020-09-02-10-41-20.png)
 这真出乎我的意料！肯定有兴趣啊，因为这将会是另一个学习机会！
+
+
