--- a/苹果面挂经历.md
+++ b/苹果面挂经历.md
@@ -1,7 +1,7 @@
 ---
 标题: 面挂苹果的经历
 标签: 个人成长
-创建时间: 2020年09月1
+创建时间: 2020年09月1日
 ---
 
 前些天有幸拿到了在美国的苹果公司一个Senior Java Engineer职位Virtual Onsite面试，昨天收到了拒信，但这个过程还是挺有收获的。那到底什么是Virtual Onsite面试呢？
