--- a/2020/2020总结.md
+++ b/2020/2020总结.md
@@ -1,4 +1,4 @@
-##2020 太需要确定性了
+# 我的魔幻而又真实的2020
 2020年年初的的时候我写了几个目标在小白板上，文字没有记录下来，我现在记得是：我想要换一份工作；提高自己的表达能力，中文和英文的；写一篇阅读量超过10000的文章等等。无非就是在职场和个人成就上有点突破，自我得到提升。更加现实一点地说，能力提升的同时挣更多的钱，收获更多的开心，获得幸福。但这些目标有些实现了，有些只是目标罢了。
 
 2020的疫情曾经让一个口罩很难买到，让很多人失去了工作，临时关闭了很多学校，延后了高考时间等等，当然也贯穿我全部的轨迹，但是，对我来说，疫情不仅仅是一个**阻碍**，同时也是一个契机，让我经历很多不一样事情的**契机**。
