--- a/2021/3月/在雪里徒步是一种怎样的体验.md
+++ b/2021/3月/在雪里徒步是一种怎样的体验.md
@@ -3,6 +3,7 @@
 
 越来越喜欢一个人去山里徒步，无论是晴天还是雪天，去山里走走总是不错的选择。我可以将那些TM烦心事全部抛在脑后，没人的时候我可以自言自语，想到什么就想什么，想快走一点我就小跑起来，想慢走一点就走走拍拍，想停下来想看看远方就驻足看看远方或者周边，山里的空间好似都是我的，想干嘛就干嘛，想不干就干嘛，这种沉浸在大自然怀抱里的感觉很爽。
 
+(待插入视频)
 
 当我准备回家时出现一个非常小的意外，我发现我的车钥匙不起作用了，我怎么按也解锁不了，手机也没有信号，不知道咋整时，恰好旁边有人走过来，就请求帮忙。他首先检查下他的手机，也没信号，然后说我也可能提供不了太多的帮助，我相信你能操作的都操作过了，我还是将钥匙给他也试试，按了几下也没反应，但当他将要给我钥匙时，车被解锁了。我在想车钥匙是不是因为天气太冷会暂时发不出信号之类的。
 
